убрал блок ритейлеров

--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -4,7 +4,7 @@
         <app-navbar [isMain]="true"></app-navbar>
         <app-main-block></app-main-block>
     </section>
-    <app-support-sites-block class=""></app-support-sites-block>
+    <!-- <app-support-sites-block class=""></app-support-sites-block> -->
     <app-partners-block class=""></app-partners-block>
     <app-faq-block class=""></app-faq-block>
     <!-- <div></div> -->
